# portfolio-optimization

./: Makefile  README.md  app.py  pyproject.toml
.ipynb_checkpoints/: tomas_portfolio-checkpoint.ipynb
portfolio_experiment/eda/: README.md  asset_portfolio_visualization.ipynb  stock_portfolio_pie_chart.ipynb
portfolio_experiment/exploration/: DCA_vs_LumpSum.ipynb  asset_portfolio_visualization.ipynb  efficient_frontier_portfolio_optimization.ipynb  etf_analyze.ipynb  killer_tech_stock_portfolio.ipynb  portfolio_backtesting.ipynb
portfolio_experiment/quant_stats/: pairs_trading.ipynb  qqq_vs_spy.html  tomas_portfolio.ipynb  tomas_portfolio.py
portfolio_experiment/quant_stats_lib/: tomas_portfolio.ipynb  zukt_portfolio.py
portfolio_experiment/strategies/: pairs_trading.ipynb  tomas_portfolio.ipynb  zukt_portfolio.py
portfolio_notebooks/: README.md  asset_portfolio_visualization.ipynb  efficient_frontier_portfolio_optimization.ipynb  killer_tech_stock_portfolio.ipynb  portfolio_optimization.ipynb  stock_portfolio_visualization.ipynb  stocks_annualized_returns.ipynb  tomas_portfolio.ipynb
portfolio_notebooks/stock_portfolio_data/: country.pickle  general.pickle  industry.pickle  market_cap.pickle
src/: DCA_vs_LP.ipynb  README.md  tomas_portfolio.ipynb
src/.ipynb_checkpoints/: intro-checkpoint.ipynb
src/commons/: lump_sum_client.py  ticker_data_collection.py
src_code/: README.md  __init__.py
src_code/.ipynb_checkpoints/: DCA_vs_LP-checkpoint.ipynb  (+2 more)
src_notebooks/: DCA_vs_LP.ipynb  DCA_vs_LumpSum.ipynb  README copy.md  intro.ipynb
(+15 files in other folders)
