[tool.poetry]
name = "portfolio-optimization"
version = "0.1.0"
description = ""
authors = ["Tomás Zúquete da Fonseca <t.zuquete.f@gmail.com>"]
readme = "README.md"
packages = [{include = "portfolio_optimization"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
numpy = "^1.25.2"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.4"
ipykernel = "^6.25.1"
yfinance = "^0.2.27"
datetime = "^5.2"
pandas-datareader = "^0.10.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
